--- a/prepros-6.config
+++ b/prepros-6.config
@@ -10,7 +10,8 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "less"
+      "less",
+      "less/blocks"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -38,6 +39,7 @@
         "less/blocks/aside.less",
         "less/blocks/menu-vertical.less",
         "less/blocks/main.less",
+        "less/blocks/front.less",
         "less/blocks/footer.less"
       ]
     }
